# ad-buyer-system

./: .env.example  .gitignore  README.md  campaign_brief.json  pyproject.toml
examples/: basic_mcp_usage.py  buyer_demo.py  buyer_interactive_demo.py  campaign_brief.json  dsp_deal_discovery.py  individual_clients.py  natural_language_a2a.py  protocol_switching.py  rivian_a2a_demo.py  rivian_demo_output.json  rivian_mcp_demo.py  rivian_r2_media_brief.py
scripts/: mock_server.py  test_a2a_debug.py  test_a2a_e2e.py  test_mcp_e2e.py  test_mcp_sdk.py  test_mcp_streamable.py  test_sse_raw.py  test_unified_client.py
src/ad_buyer/: __init__.py
src/ad_buyer/agents/: __init__.py
src/ad_buyer/agents/level1/: __init__.py  portfolio_manager.py
src/ad_buyer/agents/level2/: __init__.py  branding_agent.py  ctv_agent.py  dsp_agent.py  mobile_app_agent.py  performance_agent.py
src/ad_buyer/agents/level3/: __init__.py  (+4 more)
src/ad_buyer/clients/: __init__.py  a2a_client.py  mcp_client.py  opendirect_client.py  ucp_client.py  unified_client.py
src/ad_buyer/config/: __init__.py  agents.yaml  settings.py
src/ad_buyer/crews/: __init__.py  channel_crews.py  portfolio_crew.py
src/ad_buyer/flows/: __init__.py  deal_booking_flow.py  dsp_deal_flow.py
src/ad_buyer/interfaces/: __init__.py
src/ad_buyer/models/: __init__.py  buyer_identity.py  flow_state.py  opendirect.py  ucp.py
src/ad_buyer/tools/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_agents.py  test_buyer_identity.py  test_client.py  test_dsp_tools.py  test_models.py  test_tools.py
(+22 files in other folders)
